--- a/default.conf
+++ b/default.conf
@@ -1,46 +1,37 @@
 server
 {
 	listen 	 8000
-	root /Users/sben-ela/Desktop/WebServe/data
-	error_page  408 Errors/408.html
-	error_page 	403 Errors/403.html
-	error_page 	405 Errors/405.html
-	error_page  301 Errors/301.html
-	error_page  409 Errors/409.html
-	error_page	501 Errors/501.html
+	root /Users/sben-ela/Desktop/server/data
 	upload_path 	/Users/sben-ela/goinfre
-	cgi /Users/sben-ela/Desktop/WebServe/php-cgi .php
+	cgi /Users/sben-ela/Desktop/server/php-cgi .php
 	cgi /usr/bin/python3 .py
-	
 	location /
 	{
-		root /Users/sben-ela/Desktop/WebServe/data
-		allow_methods POST GET DELETE
+		root /Users/sben-ela/Desktop/server/data
+		allow_methods POST GET
 		upload_path /Users/sben-ela/goinfre
 		autoindex on
 	}
-	location 	/gym/test/test
+	location 	/gym
 	{
 		allow_methods Post GET
-		root ./www/gym-website-template/
-		index index.php
-	}
-	location 	/media
-	{
-		allow_methods GET 
-		root ./www/multimedia/
+		root /Users/sben-ela/Desktop/server/data/Gym
 		autoindex on
 	}
-	location 	/upload
+	location 	/get
 	{
-		allow_methods POST DELETE
-	} 
-	location 	/shop 
+		allow_methods Post GET
+		root /Users/sben-ela/Desktop/server/data/Gym
+		autoindex on
+	}
+	location	/trash
 	{
-		allow_methods GET
-		autoindex off
+		allow_methods POST DELETE GET
+		root /Users/sben-ela/Desktop/server/data/Delete
+		autoindex on
 	}
 }
+
 server
 {
 	listen 		8080
