--- a/default.conf
+++ b/default.conf
@@ -1,33 +1,39 @@
 server
 {
 	listen 	 8000
-	root /Users/sben-ela/Desktop/server/data
+	root /Users/sben-ela/Desktop/_server/data
 	upload_path 	/Users/sben-ela/goinfre
-	cgi /Users/sben-ela/Desktop/server/php-cgi .php
+	cgi /Users/sben-ela/Desktop/_server/php-cgi .php
 	cgi /usr/bin/python3 .py
 	location /
 	{
-		root /Users/sben-ela/Desktop/server/data
-		allow_methods POST GET
+		root /Users/sben-ela/Desktop/_server/data
+		allow_methods POST GET DELETE
 		upload_path /Users/sben-ela/goinfre
 		autoindex on
 	}
 	location 	/gym
 	{
 		allow_methods Post GET
-		root /Users/sben-ela/Desktop/server/data/Gym
+		root /Users/sben-ela/Desktop/_server/data/Gym
 		autoindex on
 	}
 	location 	/get
 	{
 		allow_methods Post GET
-		root /Users/sben-ela/Desktop/server/data/Gym
+		root /Users/sben-ela/Desktop/_server/data/Gym
 		autoindex on
 	}
 	location	/trash
 	{
 		allow_methods POST DELETE GET
-		root /Users/sben-ela/Desktop/server/data/Delete
+		root /Users/sben-ela/Desktop/_server/data/Delete
+		autoindex on
+	}
+	location 	/_post
+	{
+		allow_methods Post GET
+		root /Users/sben-ela/goinfre
 		autoindex on
 	}
 }
