--- a/configfile.conf
+++ b/configfile.conf
@@ -1,47 +1,43 @@
 server
 {
 	listen 	 8000
-	root /nfs/homes/sben-ela/save
-	error_page 	404 Errors/404.html
-	error_page 	403 Errors/403.html
-	error_page 	405 Errors/405.html
-	error_page  301 Errors/301.html
-	error_page  409 Errors/409.html
-	upload_path 	www/Upload
-	cgi /Users/sben-ela/goinfre/save/php-cgi .php
+	root /Users/sben-ela/Desktop/_server/data
+	upload_path 	/Users/sben-ela/goinfre/
+	cgi /Users/sben-ela/Desktop/_server/php-cgi .php
 	cgi /usr/bin/python3 .py
-	
 	location /
 	{
-		error_page 	404 Errors/404.html
-		error_page 	403 Errors/403.html
-		error_page 	406 Errors/406.html
-		allow_methods POST GET
+		root /Users/sben-ela/Desktop/_server/data
+		allow_methods POST GET DELETE
+		upload_path /Users/sben-ela/goinfre/
 		autoindex on
-		root ./www/
 	}
-	location 	/gym/test/test
+	location 	/gym
 	{
 		allow_methods Post GET
-		root ./www/gym-website-template/
-		index index.php
-	}
-	location 	/media
-	{
-		allow_methods GET 
-		root ./www/multimedia/
+		root /Users/sben-ela/Desktop/_server/data/Gym
 		autoindex on
 	}
-	location 	/upload
+	location 	/get
 	{
-		allow_methods POST DELETE
-	} 
-	location 	/shop 
+		allow_methods Post GET
+		root /Users/sben-ela/Desktop/_server/data/Gym
+		autoindex on
+	}
+	location	/trash
 	{
-		allow_methods GET
-		autoindex off
+		allow_methods POST DELETE GET
+		root /Users/sben-ela/Desktop/_server/data/Delete
+		autoindex on
+	}
+	location 	/_post
+	{
+		allow_methods Post GET
+		root /Users/sben-ela/goinfre
+		autoindex on
 	}
 }
+
 server
 {
 	listen 		8080
