--- a/default.conf
+++ b/default.conf
@@ -1,33 +1,34 @@
 server
 {
 	listen 	 8000
-	root /Users/sben-ela/Desktop/_server/data
-	upload_path 	/Users/sben-ela/goinfre
-	cgi /Users/sben-ela/Desktop/_server/php-cgi .php
+	root /Users/sben-ela/Desktop/save/data
+	upload_path 	/Users/sben-ela/goinfre/
+	cgi /Users/sben-ela/Desktop/save/php-cgi .php
 	cgi /usr/bin/python3 .py
+	server_name sben-ela
 	location /
 	{
-		root /Users/sben-ela/Desktop/_server/data
+		root /Users/sben-ela/Desktop/save/data
 		allow_methods POST GET DELETE
-		upload_path /Users/sben-ela/goinfre
+		upload_path /Users/sben-ela/goinfre/
 		autoindex on
 	}
 	location 	/gym
 	{
 		allow_methods Post GET
-		root /Users/sben-ela/Desktop/_server/data/Gym
+		root /Users/sben-ela/Desktop/save/data/Gym
 		autoindex on
 	}
 	location 	/get
 	{
 		allow_methods Post GET
-		root /Users/sben-ela/Desktop/_server/data/Gym
+		root /Users/sben-ela/Desktop/save/data/Gym
 		autoindex on
 	}
 	location	/trash
 	{
 		allow_methods POST DELETE GET
-		root /Users/sben-ela/Desktop/_server/data/Delete
+		root /Users/sben-ela/Desktop/save/data/Delete
 		autoindex on
 	}
 	location 	/_post
@@ -35,37 +36,5 @@ server
 		allow_methods Post GET
 		root /Users/sben-ela/goinfre
 		autoindex on
-	}
-}
-
-server
-{
-	listen 		8080
-	server_name 	google.com
-	location 	/website1
-	{
-		allow_methods GET POST
-		root ./www/shop-website/
-		index index1.html
-	}
-	location 	/website2
-	{
-		allow_methods GET POST
-		root ./www/gym-website-template/
-		index index2.html
-	}
-}
-
-server
-{
-	listen 		5555
-	error_page 	404 Errors/404.html
-	error_page 	403 Errors/403.html
-	error_page 	405 Errors/405.html
-	location 	/
-	{
-		allow_methods GET
-		root ./www/gym-website-template/
-		index index3.html
 	}
 }
